// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Donut chart interactions Should hide callout on mouse leave 1`] = `
<div>
  <div
    class="group/fui-donut-chart"
  >
    <div
      data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
    >
      <svg
        aria-label="Donut chart example"
        class=""
        height="196"
        width="0"
      >
        <rect
          class=""
          height="3"
          width="6"
          x="-3"
          y="-6"
        />
        <text
          aria-describedby="tooltip-_r_2_"
          aria-hidden="true"
          class=""
          dominant-baseline="auto"
          id="tooltip-host_r_1_"
          text-anchor="middle"
          x="0"
          y="0"
        >
          ...
        </text>
        <span
          hidden=""
        />
        <g
          class="group/fui-donut-pie"
          transform="translate(0, 89)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="group/fui-donut-arc"
              d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
              id="_Pie__r_0_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="group/fui-donut-arc"
              d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
              id="_Pie__r_0_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="group/fui-donut-arc"
              d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
              id="_Pie__r_0_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="group/fui-chart-popover"
      id="callout_r_3_"
    />
    <div
      class=""
      style="margin-top: -36px;"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="group/fui-legends"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="group/fui-overflow"
          style="text-align: center;"
        >
          <button
            aria-label="first"
            aria-selected="false"
            class="group/fui-button"
            data-overflow-item=""
            data-size="small"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
            type="button"
          >
            <div
              class=""
              style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
            />
            <div
              class=""
            >
              first
            </div>
          </button>
          <button
            aria-label="second"
            aria-selected="false"
            class="group/fui-button"
            data-overflow-item=""
            data-size="small"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
            type="button"
          >
            <div
              class=""
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
            />
            <div
              class=""
            >
              second
            </div>
          </button>
          <button
            aria-label="third"
            aria-selected="false"
            class="group/fui-button"
            data-overflow-item=""
            data-size="small"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
            type="button"
          >
            <div
              class=""
              style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
            />
            <div
              class=""
            >
              third
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Donut chart interactions Should reflect theme change 1`] = `
<div>
  <div
    class="group/fui-fluent-provider fui-theme-web-dark"
    dir="ltr"
  >
    <div
      class="group/fui-donut-chart"
    >
      <div
        data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      >
        <svg
          aria-label="Donut chart example"
          class=""
          height="196"
          width="0"
        >
          <rect
            class=""
            height="3"
            width="6"
            x="-3"
            y="-6"
          />
          <text
            aria-describedby="tooltip-_r_1j_"
            aria-hidden="true"
            class=""
            dominant-baseline="auto"
            id="tooltip-host_r_1i_"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
          <g
            class="group/fui-donut-pie"
            transform="translate(0, 89)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="group/fui-donut-arc"
                d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                id="_Pie__r_1h_first20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="group/fui-donut-arc"
                d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                id="_Pie__r_1h_second39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="group/fui-donut-arc"
                d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                id="_Pie__r_1h_third45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
                tabindex="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="group/fui-chart-popover"
        id="callout_r_1k_"
      />
      <div
        class=""
        style="margin-top: -36px;"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="group/fui-legends"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="group/fui-overflow"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class=""
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class=""
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class=""
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart - mouse events Should render callout correctly on mouseover 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="group/fui-donut-chart"
      >
        <div
          data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            aria-label="Donut chart example"
            class=""
            height="196"
            width="0"
          >
            <rect
              class=""
              height="3"
              width="6"
              x="-3"
              y="-6"
            />
            <text
              aria-describedby="tooltip-_r_3v_"
              aria-hidden="true"
              class=""
              dominant-baseline="auto"
              id="tooltip-host_r_3u_"
              text-anchor="middle"
              x="0"
              y="0"
            >
              ...
            </text>
            <span
              hidden=""
            />
            <g
              class="group/fui-donut-pie"
              transform="translate(0, 89)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="group/fui-donut-arc"
                  d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                  id="_Pie__r_3t_first20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="group/fui-donut-arc"
                  d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                  id="_Pie__r_3t_second39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="group/fui-donut-arc"
                  d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                  id="_Pie__r_3t_third45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                  tabindex="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="group/fui-chart-popover"
          id="callout_r_40_"
        >
          <div
            class="group/fui-popover-surface"
            data-inline="true"
            data-size="medium"
            data-tabster="{\\"restorer\\":{\\"type\\":0}}"
            role="group"
            style="position: fixed; left: 0px; top: 0px; margin: 0px;"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class=""
                >
                   
                </div>
              </div>
              <div
                class=""
                style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
              >
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    2020/04/30
                  </div>
                  <div
                    class=""
                    style="color: rgb(229, 229, 229); font-size: var(--text-hero-700);"
                  >
                    20,000
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
          style="margin-top: -36px;"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="group/fui-legends"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="group/fui-overflow"
              style="text-align: center;"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="group/fui-button"
                data-overflow-item=""
                data-size="small"
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class=""
                  style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
                />
                <div
                  class=""
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="group/fui-button"
                data-overflow-item=""
                data-size="small"
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class=""
                  style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
                />
                <div
                  class=""
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="group/fui-button"
                data-overflow-item=""
                data-size="small"
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class=""
                  style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
                />
                <div
                  class=""
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_3v_"
        role="tooltip"
      >
        <div
          class=""
        />
        Donut chart example
      </div>
      <span
        hidden=""
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="group/fui-donut-chart"
    >
      <div
        data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      >
        <svg
          aria-label="Donut chart example"
          class=""
          height="196"
          width="0"
        >
          <rect
            class=""
            height="3"
            width="6"
            x="-3"
            y="-6"
          />
          <text
            aria-describedby="tooltip-_r_3v_"
            aria-hidden="true"
            class=""
            dominant-baseline="auto"
            id="tooltip-host_r_3u_"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
          <g
            class="group/fui-donut-pie"
            transform="translate(0, 89)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="group/fui-donut-arc"
                d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                id="_Pie__r_3t_first20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="group/fui-donut-arc"
                d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                id="_Pie__r_3t_second39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="group/fui-donut-arc"
                d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                id="_Pie__r_3t_third45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
                tabindex="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="group/fui-chart-popover"
        id="callout_r_40_"
      >
        <div
          class="group/fui-popover-surface"
          data-inline="true"
          data-size="medium"
          data-tabster="{\\"restorer\\":{\\"type\\":0}}"
          role="group"
          style="position: fixed; left: 0px; top: 0px; margin: 0px;"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <div
                class=""
              >
                 
              </div>
            </div>
            <div
              class=""
              style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
            >
              <div
                class=""
              >
                <div
                  class=""
                >
                  2020/04/30
                </div>
                <div
                  class=""
                  style="color: rgb(229, 229, 229); font-size: var(--text-hero-700);"
                >
                  20,000
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=""
        style="margin-top: -36px;"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="group/fui-legends"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="group/fui-overflow"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class=""
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class=""
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class=""
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DonutChart - mouse events Should render customized callout on mouseover 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="group/fui-donut-chart"
      >
        <div
          data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        >
          <svg
            aria-label="Donut chart example"
            class=""
            height="196"
            width="0"
          >
            <rect
              class=""
              height="3"
              width="6"
              x="-3"
              y="-6"
            />
            <text
              aria-describedby="tooltip-_r_4c_"
              aria-hidden="true"
              class=""
              dominant-baseline="auto"
              id="tooltip-host_r_4b_"
              text-anchor="middle"
              x="0"
              y="0"
            >
              ...
            </text>
            <span
              hidden=""
            />
            <g
              class="group/fui-donut-pie"
              transform="translate(0, 89)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="group/fui-donut-arc"
                  d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                  id="_Pie__r_4a_first20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="group/fui-donut-arc"
                  d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                  id="_Pie__r_4a_second39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="group/fui-donut-arc"
                  d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                  id="_Pie__r_4a_third45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                  tabindex="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="group/fui-chart-popover"
          id="callout_r_4d_"
        >
          <div
            class="group/fui-popover-surface"
            data-inline="true"
            data-size="medium"
            data-tabster="{\\"restorer\\":{\\"type\\":0}}"
            role="group"
            style="position: fixed; left: 0px; top: 0px; margin: 0px;"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class=""
                >
                   
                </div>
              </div>
              <div
                class=""
                style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
              >
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    2020/04/30
                  </div>
                  <div
                    class=""
                    style="color: rgb(229, 229, 229); font-size: var(--text-hero-700);"
                  >
                    20,000
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
          style="margin-top: -36px;"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="group/fui-legends"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="group/fui-overflow"
              style="text-align: center;"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="group/fui-button"
                data-overflow-item=""
                data-size="small"
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class=""
                  style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
                />
                <div
                  class=""
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="group/fui-button"
                data-overflow-item=""
                data-size="small"
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class=""
                  style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
                />
                <div
                  class=""
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="group/fui-button"
                data-overflow-item=""
                data-size="small"
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class=""
                  style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
                />
                <div
                  class=""
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="group/fui-portal"
      data-portal-node="true"
      dir="ltr"
    >
      <div
        class="group/fui-tooltip"
        id="tooltip-_r_4c_"
        role="tooltip"
      >
        <div
          class=""
        />
        Donut chart example
      </div>
      <span
        hidden=""
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="group/fui-donut-chart"
    >
      <div
        data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      >
        <svg
          aria-label="Donut chart example"
          class=""
          height="196"
          width="0"
        >
          <rect
            class=""
            height="3"
            width="6"
            x="-3"
            y="-6"
          />
          <text
            aria-describedby="tooltip-_r_4c_"
            aria-hidden="true"
            class=""
            dominant-baseline="auto"
            id="tooltip-host_r_4b_"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
          <g
            class="group/fui-donut-pie"
            transform="translate(0, 89)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="group/fui-donut-arc"
                d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                id="_Pie__r_4a_first20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="group/fui-donut-arc"
                d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                id="_Pie__r_4a_second39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="group/fui-donut-arc"
                d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                id="_Pie__r_4a_third45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
                tabindex="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="group/fui-chart-popover"
        id="callout_r_4d_"
      >
        <div
          class="group/fui-popover-surface"
          data-inline="true"
          data-size="medium"
          data-tabster="{\\"restorer\\":{\\"type\\":0}}"
          role="group"
          style="position: fixed; left: 0px; top: 0px; margin: 0px;"
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <div
                class=""
              >
                 
              </div>
            </div>
            <div
              class=""
              style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
            >
              <div
                class=""
              >
                <div
                  class=""
                >
                  2020/04/30
                </div>
                <div
                  class=""
                  style="color: rgb(229, 229, 229); font-size: var(--text-hero-700);"
                >
                  20,000
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=""
        style="margin-top: -36px;"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="group/fui-legends"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="group/fui-overflow"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class=""
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class=""
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="group/fui-button"
              data-overflow-item=""
              data-size="small"
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class=""
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class=""
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DonutChart snapShot testing Should elevate all smaller values to minimums 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_31_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_30_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2v_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2v_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2v_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_32_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="group/fui-overflow"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class=""
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class=""
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class=""
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing Should render arc labels 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_2n_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_2m_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2l_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class=""
            dominant-baseline="auto"
            text-anchor="start"
            x="-1.143083014314768"
            y="1.6411463135214555"
          >
            20k
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2l_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class=""
            dominant-baseline="hanging"
            text-anchor="start"
            x="-1.3603172563291284"
            y="-1.4661299267572407"
          >
            39k
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2l_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class=""
            dominant-baseline="auto"
            text-anchor="end"
            x="1.9541939332494636"
            y="0.42558908732601586"
          >
            45k
          </text>
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_2o_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="group/fui-overflow"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class=""
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class=""
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class=""
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing Should render arc labels in percentage format 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_2s_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_2r_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2q_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class=""
            dominant-baseline="auto"
            text-anchor="start"
            x="-1.143083014314768"
            y="1.6411463135214555"
          >
            19%
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2q_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class=""
            dominant-baseline="hanging"
            text-anchor="start"
            x="-1.3603172563291284"
            y="-1.4661299267572407"
          >
            38%
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2q_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class=""
            dominant-baseline="auto"
            text-anchor="end"
            x="1.9541939332494636"
            y="0.42558908732601586"
          >
            43%
          </text>
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_2t_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="group/fui-overflow"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class=""
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class=""
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class=""
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders DonutChart correctly 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_1t_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_1s_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
            id="_Pie__r_1r_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
            id="_Pie__r_1r_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
            id="_Pie__r_1r_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_1u_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="group/fui-overflow"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class=""
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class=""
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class=""
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders DonutChart correctly without color points 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_22_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_21_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_20_first20000"
            opacity="1"
            role="img"
            style="cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_20_second39000"
            opacity="1"
            role="img"
            style="cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_20_third45000"
            opacity="1"
            role="img"
            style="cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_23_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="group/fui-overflow"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-borderColor: var(--color-neutral-stroke-1);"
          type="button"
        >
          <div
            class=""
            style="height: 12px; border-color: var(--color-neutral-stroke-1); --rect-content-high-contrast: linear-gradient(to right, undefined, undefined);"
          />
          <div
            class=""
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-borderColor: var(--color-neutral-stroke-1);"
          type="button"
        >
          <div
            class=""
            style="height: 12px; border-color: var(--color-neutral-stroke-1); --rect-content-high-contrast: linear-gradient(to right, undefined, undefined);"
          />
          <div
            class=""
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-borderColor: var(--color-neutral-stroke-1);"
          type="button"
        >
          <div
            class=""
            style="height: 12px; border-color: var(--color-neutral-stroke-1); --rect-content-high-contrast: linear-gradient(to right, undefined, undefined);"
          />
          <div
            class=""
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders enabledLegendsWrapLines correctly 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_2e_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_2d_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2c_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2c_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2c_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_2f_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
      style="justify-content: center; flex-wrap: wrap;"
    >
      <div
        class=""
        style="display: flex; flex-wrap: wrap; overflow: auto;"
      >
        <div
          class=""
        >
          <button
            aria-label="first"
            aria-selected="false"
            class="group/fui-button"
            data-size="small"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
            type="button"
          >
            <div
              class=""
              style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
            />
            <div
              class=""
            >
              first
            </div>
          </button>
        </div>
        <div
          class=""
        >
          <button
            aria-label="second"
            aria-selected="false"
            class="group/fui-button"
            data-size="small"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
            type="button"
          >
            <div
              class=""
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
            />
            <div
              class=""
            >
              second
            </div>
          </button>
        </div>
        <div
          class=""
        >
          <button
            aria-label="third"
            aria-selected="false"
            class="group/fui-button"
            data-size="small"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
            type="button"
          >
            <div
              class=""
              style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
            />
            <div
              class=""
            >
              third
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders hideLegend correctly 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="200"
      width="0"
    >
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 91)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_25_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_25_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_25_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_26_"
  />
</div>
`;

exports[`DonutChart snapShot testing renders hideTooltip correctly 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_29_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_28_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_27_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_27_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_27_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_2a_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="group/fui-overflow"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class=""
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class=""
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class=""
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders value inside onf the pie 1`] = `
<div
  class="group/fui-donut-chart"
>
  <div
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
  >
    <svg
      aria-label="Donut chart example"
      class=""
      height="196"
      width="0"
    >
      <rect
        class=""
        height="3"
        width="6"
        x="-3"
        y="-6"
      />
      <text
        aria-describedby="tooltip-_r_2i_"
        aria-hidden="true"
        class=""
        dominant-baseline="auto"
        id="tooltip-host_r_2h_"
        text-anchor="middle"
        x="0"
        y="0"
      >
        ...
      </text>
      <span
        hidden=""
      />
      <g
        class="group/fui-donut-pie"
        transform="translate(0, 89)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2g_first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2g_second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="group/fui-donut-arc"
            d="M0,0Z"
            id="_Pie__r_2g_third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="group/fui-chart-popover"
    id="callout_r_2j_"
  />
  <div
    class=""
    style="margin-top: -36px;"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="group/fui-legends"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="group/fui-overflow"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: rgb(229, 229, 229); --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class=""
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: rgb(0, 120, 212); --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class=""
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="group/fui-button"
          data-overflow-item=""
          data-size="small"
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class=""
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: rgb(218, 218, 218); --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class=""
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
